3.6/mule-user-guide/studio-update-sites.adoc
== Studio Update Sites
:keywords: mule, esb, studio, anypoint studio, update sites, updates, extensions, plug-ins, plugins, download


[WARNING]
====
This page lists the URLs of all the update sites for the **January 2015 Anypoint Studio with 3.6.0 Runtime**. Verify your Studio version before proceeding, as installing updates from the incorrect update sites can cause errors.

To check your version of Studio, go to *Anypoint Studio* > *About Anypoint Studio*.
====

To access these update sites in Studio:

. Go to *Help* > *Install New Software*.
. Select one of these update sites from the drop-down menu next to the *Work with* field. 
. If you don't see the site you need, click *Add* to add it manually. +

[width="100%",cols="25%,25%,25%,25%",options="header"]
|===
|Name |Studio Update Site URL |Contains |Notes
|*Anypoint Studio Update Site* |http://studio.mulesoft.org/r4/plugin a|
Updates for Anypoint Studio application itself.

DataMapper Designer updates

SAP Connector

Mule ESB Server 3.6 EE Runtime

 | 
|*Mule ESB Runtimes for Studio* |http://studio.mulesoft.org/r4/studio-runtimes |Mule ESB Server Runtime 3.6.0 CE | 
|*Anypoint Connectors Update Site* |http://repository.mulesoft.org/connectors/releases/3.5.0 |All Community, Standard, and Premium Anypoint Connectors available for Studio installation. a|
Connectors appended with "(Mule 3.5+)" are supported for use in 3.5.X and later runtimes. Other connectors in the list are supported for 3.4.X and are forward compatible.

Access a list of link:/documentation/display/current/Anypoint+Connectors#AnypointConnectors-AccessingConnectors[Anypoint Connectors already installed in Studio] with this version.

|*APIkit Update Site* |http://studio.mulesoft.org/r4/apikit a|
APIkit Studio Plugin updates

RAML API Editor updates

 |Read more about link:/documentation/display/current/Building+Your+API[APIkit].
|*API Gateway Update Site* |https://studio.mulesoft.org.s3.amazonaws.com/r3/api-gateway/ |API Gateway runtime |Read more about the link:/documentation/display/current/Anypoint+Platform+for+APIs[Anypoint Platform for APIs].
|*Anypoint Enterprise Security* |http://security-update-site-1.4.s3.amazonaws.com a|
Mule Security Module Extensions:

* CRC-32
* Encrypted Property Placeholder
* Encryption
* OAuth 2 Provider
* Security Filters
* Signature

Anypoint Studio Properties File Editor

 |Note that you need an Enterprise license to run applications containing link:/documentation/display/current/Anypoint+Enterprise+Security[Anypoint Enterprise Security] features.
|*Beta Add-ons Update Site* |http://studio.mulesoft.org/r4/addons/beta |Anypoint Connector DevKit Studio Module (Beta) |This site contains Beta extensions that you can install for early access to upcoming features.
|*Anypoint Studio Eclipse Plugin* |http://studio.mulesoft.org/r3/plugin a|
Eclipse plugin version of Anypoint Studio

SAP Connector

Selected Anypoint Connectors

DataMapper designer

 |Read more about installing link:/documentation/display/current/Studio+in+Eclipse[Anypoint Studio as an Eclipse Plugin].
|*MUnit* |http://studio.mulesoft.org/r4/munit |link:/documentation/display/current/MUnit[MUnit] beta framework for testing Mule Applications | 
|===

[WARNING]
====
*Are you behind a firewall?* +

If you are on a network with firewall restrictions, you may find that the Studio update sites are blocked and you are unable to download extensions. Configure your firewall so that it allows the following sites, which will permit Studio to connect to the above update sites:

 Allow on Firewall

http://studio.mulesoft.org/[http://studio.mulesoft.org]

http://repository.mulesoft.org/connectors/releases/

http://download.eclipse.org/technology/m2e/releases

http://download.eclipse.org/eclipse/updates

http://subclipse.tigris.org/[http://subclipse.tigris.org]

http://findbugs.cs.umd.edu/eclipse/
====
